--- a/payment_gateway/daftar_payment_gateway_neon.html
+++ b/payment_gateway/daftar_payment_gateway_neon.html
@@ -20,16 +20,22 @@
         <div class="legend-container">
             <h3 class="legend-title">Keterangan</h3>
             <div class="legend-row">
-                <span class="badge tier-1" style="width: 80px; text-align: center;">A</span>
+                <span class="badge tier-1">A</span>
                 <span class="legend-stars">★★★★★</span>
             </div>
             <div class="legend-row">
-                <span class="badge tier-2" style="width: 80px; text-align: center;">B</span>
+                <span class="badge tier-2">B</span>
                 <span class="legend-stars">★★★★</span>
             </div>
             <div class="legend-row">
-                <span class="badge tier-3" style="width: 80px; text-align: center;">C</span>
+                <span class="badge tier-3">C</span>
                 <span class="legend-stars">★★</span>
+            </div>
+            <div class="legend-row">
+                <span class="badge tier-unknown">?</span>
+                <span class="legend-stars"
+                    style="color: var(--text-muted); font-size: 0.9em; letter-spacing: normal;">Tidak diketahui/tidak
+                    tertulis secara jelas</span>
             </div>
         </div>
 
@@ -43,6 +49,7 @@
                             <th>Asal</th>
                             <th>Kasta</th>
                             <th>QRIS</th>
+                            <th>Bank/VA</th>
                             <!-- BANK COLUMNS -->
                             <th>BCA</th>
                             <th>BNI</th>
@@ -77,7 +84,17 @@
                 origin: "🇮🇩",
                 tier: "A",
                 qris: "0.7%",
-                banks: { bca: "Rp 4.000", bni: true, mandiri: "Rp 4.000", bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 4.000",
+                banks: {
+                    bca: "Rp 4.000",
+                    bni: "Rp 4.000",
+                    mandiri: "Rp 4.000",
+                    bri: "Rp 4.000",
+                    permata: "Rp 4.000",
+                    cimb: "Rp 4.000",
+                    danamon: "Rp 4.000",
+                    bsi: "Rp 4.000"
+                },
                 desc: "Fitur terlengkap, standar industri.",
                 link: "https://midtrans.com/id/biaya"
             },
@@ -86,7 +103,17 @@
                 origin: "🇮🇩",
                 tier: "A",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 4.000",
+                banks: {
+                    bca: "?",
+                    bni: "?",
+                    mandiri: "?",
+                    bri: "?",
+                    permata: "?",
+                    cimb: "?",
+                    danamon: "?",
+                    bsi: "?"
+                },
                 desc: "UI Dashboard terbaik (Sangat Modern/UX).",
                 link: "https://www.xendit.co/id/biaya/"
             },
@@ -95,8 +122,17 @@
                 origin: "🇮🇩",
                 tier: "A",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
-                desc: "Pemain paling senior (Sepuh), stabil.",
+                va: "Rp 4.000",
+                banks: {
+                    bca: "Rp 4.000",
+                    bni: "?",
+                    mandiri: "?",
+                    bri: "?",
+                    permata: "?",
+                    cimb: "?",
+                    danamon: "?",
+                    bsi: "?" },
+                desc: "Pemain paling senior (Sepuh), stabil. (Harga belum termasuk PPN).",
                 link: "https://www.doku.com/harga"
             },
             {
@@ -104,7 +140,16 @@
                 origin: "🇮🇩",
                 tier: "A",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp2.000 - Rp3.000",
+                banks: {
+                    bca: "Rp3.000",
+                    bni: "Rp2.500",
+                    mandiri: "Rp2.500",
+                    bri: "Rp2.500",
+                    permata: "Rp2.500",
+                    cimb: "Rp2.500",
+                    danamon: "Rp2.500",
+                    bsi: "Rp2.500" },
                 desc: "Spesialis Transfer (Disbursement).",
                 link: "https://flip.id/business/pricing"
             },
@@ -113,7 +158,16 @@
                 origin: "🇰🇷",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp4.000 – Rp4.500",
+                banks: {
+                    bca: "?",
+                    bni: "?",
+                    mandiri: "?",
+                    bri: "?",
+                    permata: "?",
+                    cimb: "?",
+                    danamon: "?",
+                    bsi: "?" },
                 desc: "Teknologi Korea, handal volume besar.",
                 link: "https://nicepay.co.id/id/pricing/"
             },
@@ -122,7 +176,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: false },
+                va: "Rp 4.000",
+                banks: {
+                    bca: "Rp. 4.000",
+                    bni: "Rp. 4.000",
+                    mandiri: "Rp. 4.000",
+                    bri: "Rp. 4.000",
+                    permata: "Rp. 4.000",
+                    cimb: "Rp. 4.000",
+                    danamon: "Rp. 4.000",
+                    bsi: "Rp. 4.000" },
                 desc: "Fokus industri Hotel & Travel.",
                 link: "https://faspay.co.id/id/harga/"
             },
@@ -131,7 +194,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: false, bsi: true },
+                va: "Rp 1.500 - Rp 5.000",
+                banks: {
+                    bca: "Rp 5.000",
+                    bni: "? (Rp 3.000)",
+                    mandiri: "Rp 4.000",
+                    bri: "? (Rp 3.000)",
+                    permata: "? (Rp 3.000)",
+                    cimb: "? (Rp 3.000)",
+                    danamon: "? (Rp 3.000)",
+                    bsi: "? (Rp 3.000)" },
                 desc: "Dicintai developer lokal, simpel.",
                 link: "https://www.duitku.com/harga/"
             },
@@ -140,7 +212,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 2.500 - Rp 5.000",
+                banks: {
+                    bca: "Rp 4.000",
+                    bni: "Rp 3.500",
+                    mandiri: "Rp 3.500",
+                    bri: "Rp 3.500",
+                    permata: "Rp 3.500",
+                    cimb: "Rp. 2.500",
+                    danamon: "Rp 3.000",
+                    bsi: "?" },
                 desc: "Spesialis 'White Label'.",
                 link: "https://prismalink.co.id/harga-promo-payment-gateway-2/"
             },
@@ -149,7 +230,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 2.000 - Rp 4.000",
+                banks: {
+                    bca: "? ✔",
+                    bni: "? ✔",
+                    mandiri: "? ✔",
+                    bri: "? ✔",
+                    permata: "? ✔",
+                    cimb: "? ✔",
+                    danamon: "? ✔",
+                    bsi: "? ✔" },
                 desc: "Fokus B2B & Supply Chain.",
                 link: "https://espay.id/v2-biaya/"
             },
@@ -157,8 +247,17 @@
                 name: "Ratapay",
                 origin: "🇮🇩",
                 tier: "C",
-                qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                qris: "? Rp 1.000",
+                va: "Rp 1.000",
+                banks: {
+                    bca: "? ✔",
+                    bni: "? ✔",
+                    mandiri: "? ✔",
+                    bri: "? ✔",
+                    permata: "?",
+                    cimb: "?",
+                    danamon: "?",
+                    bsi: "?" },
                 desc: "Murah meriah (Flat Rp 1k).",
                 link: "https://ratapay.co.id/"
             },
@@ -167,7 +266,16 @@
                 origin: "🇮🇩",
                 tier: "C",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 4.000",
+                banks: {
+                      bca: "Rp 4.000",
+                      bni: "Rp 4.000",
+                      mandiri: "Rp 4.000",
+                      bri: "Rp 4.000",
+                      permata: "Rp 4.000",
+                      cimb: "Rp 4.000",
+                      danamon: "?",
+                      bsi: "Rp 4.000" },
                 desc: "Alternatif murah & solid.",
                 link: "https://www.winpay.id/daftar-harga/"
             },
@@ -176,7 +284,16 @@
                 origin: "🇮🇩",
                 tier: "C",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: false, bsi: true },
+                va: "Rp 4.000",
+                banks: {
+                      bca: "Rp 4.000",
+                      bni: "Rp 4.000",
+                      mandiri: "Rp 4.000",
+                      bri: "Rp 4.000",
+                      permata: "Rp 4.000",
+                      cimb: "Rp 4.000",
+                      danamon: "?",
+                      bsi: "Rp 4.000" },
                 desc: "Jual Ebook/Kelas/Webinar.",
                 link: "https://mayar.id/pricing"
             },
@@ -185,7 +302,16 @@
                 origin: "🇮🇩",
                 tier: "C",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: false, bsi: true },
+                va: "± Rp 4.250",
+                banks: {
+                      bca: "Rp 5.500",
+                      bni: "Rp 4.250",
+                      mandiri: "Rp 4.250",
+                      bri: "Rp 4.250",
+                      permata: "Rp 4.250",
+                      cimb: "Rp 4.250",
+                      danamon: "Rp 4.250",
+                      bsi: "Rp 4.250" },
                 desc: "Raja di Voucher Game & Pulsa.",
                 link: "https://tripay.co.id/"
             },
@@ -194,7 +320,16 @@
                 origin: "🇸🇬",
                 tier: "C",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 4.000",
+                banks: {
+                      bca: "Rp 4.000",
+                      bni: "Rp 4.000",
+                      mandiri: "Rp 4.000",
+                      bri: "Rp 4.000",
+                      permata: "Rp 4.000",
+                      cimb: "?",
+                      danamon: "?",
+                      bsi: "?" },
                 desc: "UI/UX sangat slick.",
                 link: "https://www.durianpay.id/pricing"
             },
@@ -203,7 +338,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "± Rp. 3.500",
+                banks: {
+                      bca: "Rp 4.500",
+                      bni: "Rp 3.500",
+                      mandiri: "Rp 4.000",
+                      bri: "Rp 3.500",
+                      permata: "Rp 3.500",
+                      cimb: "Rp 3.500",
+                      danamon: "Rp 3.500",
+                      bsi: "Rp 3.500" },
                 desc: "Fitur Link Payment.",
                 link: "https://ipaymu.com/id/pricing/"
             },
@@ -211,8 +355,17 @@
                 name: "HitPay",
                 origin: "🇸🇬",
                 tier: "C",
-                qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                qris: "2%",
+                va: "Rp. 5.000",
+                banks: {
+                      bca: "?",
+                      bni: "Rp 5.000",
+                      mandiri: "Rp 5.000",
+                      bri: "Rp 5.000",
+                      permata: "Rp 5.000",
+                      cimb: "Rp 5.000",
+                      danamon: "?",
+                      bsi: "Rp 5.000" },
                 desc: "No-code POS Software gratis.",
                 link: "https://hitpayapp.com/pricing"
             },
@@ -220,8 +373,17 @@
                 name: "Cashup",
                 origin: "🇮🇩",
                 tier: "B",
-                qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: false, bsi: false },
+                qris: "?",
+                va: "?",
+                banks: {
+                      bca: "?",
+                      bni: "?",
+                      mandiri: "?",
+                      bri: "?",
+                      permata: "?",
+                      cimb: "?",
+                      danamon: "?",
+                      bsi: "?" },
                 desc: "Fokus Offline/EDC (Ex-Cashlez).",
                 link: "https://cashup.id/pricing.html"
             },
@@ -230,7 +392,16 @@
                 origin: "🇮🇩",
                 tier: "C",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "?",
+                banks: {
+                  bca: "?",
+                  bni: "?",
+                  mandiri: "?",
+                  bri: "?",
+                  permata: "?",
+                  cimb: "?",
+                  danamon: "?",
+                  bsi: "?" },
                 desc: "Fokus merchant UMKM.",
                 link: "https://paydia.id/qris/"
             },
@@ -239,7 +410,16 @@
                 origin: "🇮🇩",
                 tier: "B",
                 qris: "0.7%",
-                banks: { bca: true, bni: true, mandiri: true, bri: true, permata: true, cimb: true, danamon: true, bsi: true },
+                va: "Rp 5.000",
+                banks: {
+                      bca: "Rp 5.000",
+                      bni: "Rp 5.000",
+                      mandiri: "Rp 5.000",
+                      bri: "Rp 5.000",
+                      permata: "?",
+                      cimb: "?",
+                      danamon: "?",
+                      bsi: "?" },
                 desc: "Solusi Biller Gateway.",
                 link: "https://www.e2pay.co.id/produk/biaya"
             }
@@ -274,6 +454,12 @@
                     }
                 });
 
+                // Bank/VA Column Logic
+                let vaDisplay = pg.va || '?';
+                if (vaDisplay === '?') {
+                    vaDisplay = '<span class="price-qris" style="color:#777">?</span>';
+                }
+
                 html += `
                     <tr>
                         <td>${index + 1}</td>
@@ -281,6 +467,7 @@
                         <td>${pg.origin}</td>
                         <td><span class="badge ${tierClass}">${pg.tier}</span></td>
                         <td class="price-qris">${pg.qris}</td>
+                        <td class="price-qris">${vaDisplay}</td>
                         ${bankCols}
                         <td class="text-cons">${pg.desc}</td>
                         <td><a href="${pg.link}" target="_blank" class="btn-glow">VISIT</a></td>
